2005-02-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (show_scores): Bug 168270. Show the correct high score 
	category when we win a game.

2005-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_get_type): Fill out the GTypeInfo
	structure completely. This looks like what has been causing the
	start-up crashes.

2005-02-02  Richard Hoelscher  <rah@rahga.com>

	* gnomine.c (create_preferences): Set mines spinbutton range here,
	as it only relied on x/ysize spinbutton cb. Remove harmless FIXME.

2005-01-10  Richard Hoelscher  <rah@rahga.com>

	* minefield.c (_setup_sign) (gtk_minefield_setup_signs): 
	Provide warnings for image loading failure and missing images.

2005-01-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Use the generic games-scores-dialog rather than our
	custom one. Also make scores permanently sensitive so people can
	view the high score lists for the other sizes. Also cleanup some
	unnecessarily compilcated code to do with the scoring.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* minefield.c (_setup_sign): Preimage API update, uri -> file.

2004-11-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Fix the window placement check. && instead of
	||, it allows a negative placement. Also move to later so that the
	window->window dereference doesn't segfault. The cause of bug
	#150186 ? Possibly, but they don't mention session-management.
	
	Also changed some checks to avoid GTK warnings when things are set
	to negative values.

	Also replace home-brew range () with glib's CLAMP ().

2004-11-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Use gtk_window_set_default_icon_name (via
	Paolo Borelli).

2004-09-25  Richard Hoelscher  <rah@rahga.com>

	* minefield.h
	* minefield.c (gtk_minefield_init): switch to GamesPreimage.
	(_setup_sign): Replace gdk_pixbuf_scale_simple with
	games_preimage_render.
	